plugins/kotlin/idea/tests/testData/checker/codeFragments/privateFunArgumentsResolve.kt.fragment.k2
@Suppress("INVISIBLE_MEMBER")
MyClass().<error descr="[INVISIBLE_REFERENCE] Cannot access 'fun privateFun(i: Int): Int': it is private in '/MyClass'.">privateFun</error>("s")